# Hackslash-SigSTP2025-Solutions

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
Task-1/: ATM.cc  ATM.h  main.cc  problem.txt
Task-1/tests/: main.cc
Task-2/: TaskManager.cc  TaskManager.h  main.cc  problem.txt
Task-2/tests/: main.cc
Task-3/: main.cc  parser.cc  parser.h  partOne.cc  partTwo.cc  problem.txt  solution.h
Task-3/tests/: example-3-puzzle.txt  main.cc
utils/: test.h
